--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
       <title>Delayota</title>
   </head>
-  <body>                                          
+  <body>
+    <div class="header">
+      <h2>Belajar Membuat Layout dengan HTML dan CSS<h2>
+    </div>
 <h2>Belajar Membuat Website dengan HTML ,  no CSS dan no Layout</h2>
               <ul>
                       <li><a href="index.html">Home</a></li>
@@ -33,6 +36,7 @@
                       <p>copyright 2026 delayota all reserved</p>
   </body>
 </html>
+
 
 
 
