--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
       <title>Delayota</title>
+      <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
@@ -36,6 +37,7 @@
                       <p>copyright 2026 delayota all reserved</p>
   </body>
 </html>
+
 
 
 
